--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^8.5.2",
     "mongoose-id-autoincrement": "^1.0.4",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "validator": "^13.12.0"
+
   }
 }
